fixed register page double scroll

--- a/src/styles/register.module.css
+++ b/src/styles/register.module.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: space-around;
     margin-top: 20px;
-    height: fit-content;
+    height: 93vh;
     width: 100%; 
     margin: 0;
     max-width: 100%;
@@ -19,7 +19,7 @@
     /* overflow: scroll; */
     z-index: 10;
     /* background-color: rgb(11, 19, 34); */
-    /* scroll-behavior: unset; */
+    scroll-behavior: unset;
 }
 .treasurebox{
     position: fixed;
@@ -79,7 +79,6 @@
     width: 75%;
     width: 474px;
     height: 520px;
-    padding-bottom: 20%;
     /* min-width: 250px; */
     @media (max-height: 500px) {
         @media (min-width: 500px) {
@@ -204,7 +203,7 @@
     
     @media (max-width: 500px) {
         font-size: 13px;
-        /* overflow: scroll; */
+        overflow: scroll;
     }
 }
 .login:hover{
